--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,5 @@
+copy.h1.lead=We are a responsbile organization
+copy.h1.text=About Header
 index.main.callout=Bootstrap starter template
+navbar.about.text=About
+navbar.home.text=Home
