--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,5 +1,13 @@
+contact.h1.text=We Value your feedback
+contact.p.lead=Please let us know
 copy.h1.lead=We are a responsbile organization
 copy.h1.text=About Header
+form.email=email
+form.feedback=Feedback
+form.firstName=First Name
+form.lastName=LastName
+form.submit=Submit
 index.main.callout=Bootstrap starter template
+navbar.about.contact=Contact Us
 navbar.about.text=About
 navbar.home.text=Home
