--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,6 +8,11 @@ form.firstName=First Name
 form.lastName=LastName
 form.submit=Submit
 index.main.callout=Bootstrap starter template
+login.form.password=Password
+login.form.username=Login
+login.h1.text=Sign in
+login.p.lead=Please Login
 navbar.about.contact=Contact Us
 navbar.about.text=About
 navbar.home.text=Home
+navbar.login=Login
