--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -16,3 +16,5 @@ navbar.about.contact=Contact Us
 navbar.about.text=About
 navbar.home.text=Home
 navbar.login=Login
+payload.h1.logged=You are Logged in
+payload.h1.text=You have the access
