--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,13 +8,16 @@ form.firstName=First Name
 form.lastName=LastName
 form.submit=Submit
 index.main.callout=Bootstrap starter template
+login.error.message=Login Error
 login.form.password=Password
 login.form.username=Login
 login.h1.text=Sign in
+login.logout.success=Logout Success
 login.p.lead=Please Login
 navbar.about.contact=Contact Us
 navbar.about.text=About
 navbar.home.text=Home
 navbar.login=Login
+navbar.logout.text=Logout
 payload.h1.logged=You are Logged in
 payload.h1.text=You have the access
