--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,9 @@ contact.h1.text=We Value your feedback
 contact.p.lead=Please let us know
 copy.h1.lead=We are a responsbile organization
 copy.h1.text=About Header
+forgotmypassword.submit.text=Forgot Password
+forgotpassword.fill.in.form.below=Please fill the form below
+forgotpassword.message.success=Request send Successfully
 form.email=email
 form.feedback=Feedback
 form.firstName=First Name
@@ -9,6 +12,7 @@ form.lastName=LastName
 form.submit=Submit
 index.main.callout=Bootstrap starter template
 login.error.message=Login Error
+login.forgot.password.text=Forgot Password
 login.form.password=Password
 login.form.username=Login
 login.h1.text=Sign in
@@ -21,3 +25,4 @@ navbar.login=Login
 navbar.logout.text=Logout
 payload.h1.logged=You are Logged in
 payload.h1.text=You have the access
+fogorgot_password_text=forgot password
