--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -26,3 +26,5 @@ navbar.logout.text=Logout
 payload.h1.logged=You are Logged in
 payload.h1.text=You have the access
 fogorgot_password_text=forgot password
+resetPassword.message.success=Password Reset Successfully
+resetPassword.message.p.lead=Reset your password
