--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -28,3 +28,28 @@ payload.h1.text=You have the access
 fogorgot_password_text=forgot password
 resetPassword.message.success=Password Reset Successfully
 resetPassword.message.p.lead=Reset your password
+signup.profile.created.success=Profile Created Successfully
+signup.form.error.username.already.exists=Username Already Exists
+signup.form.username=Username
+signup.form.error.email.already.exists=Duplicate Email
+signup.form.password=Password
+signup.form.confirm.password=Confirm Password
+form.firstname=First Name
+form.lastname=Last Name
+signup.form.description=Description
+signup.form.profile.image.url=Image Url
+signup.form.country=Country
+signup.form.phoneNumber=Phone Number
+signup.form.credit.card.number=Credit Card Number
+signup.form.cvv.number=CVV Number
+signup.form.card.expiration=Expiry Date
+signup.h1.basic.profile=Basic Profile
+signup.h1.pro.profile=Pro Profile
+index.h1.text=Main Application
+index.p.lead=Main Application
+index.basic.membership=Basic Membership
+index.h4.basic.membership=Basic Membership
+index.basic.signup.button=Signup
+index.pro.membership=Pro membership
+index.h4.pro.membership=Pro membership
+index.pro.signup.button=Pro Signup
